Rename NetconfHelloMessage to HelloMessage
Let's keep things consistent by renaming NetconfHelloMessage to
HelloMessage -- similar to how we have NotificationMessage.

JIRA: NETCONF-1000
Change-Id: I50bfb9200dc6c7624a76eeac2b13f5324bedd7cb
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>